<resources>
    <string name="app_name">RunningCrew</string>
    <string name="title_history">러닝기록</string>
    <string name="history_record">러닝 기록하기</string>
    <string name="history_personal_btn_description">혼자서도 잘 달릴 수 있어요</string>
    <string name="history_crew_btn_description">크루원들과 함께 러닝</string>
    <string name="history_personal_btn_text">개인 러닝</string>
    <string name="history_crew_btn_text">크루 러닝</string>



    <string name="title_personal_run">개인 러닝</string>
    <string name="personal_prepare_kilometer">킬로미터</string>
    <string name="personal_prepare_time">시간:분</string>
    <string name="personal_prepare_start_btn">시작</string>

    <string name="count_down_description">러닝을 시작합니다</string>
    <string name="running_record_time">시간</string>
    <string name="running_record_distance">킬로미터</string>
    <string name="running_record_pace_now">현재 페이스</string>
    <string name="running_record_pace_avr">평균 페이스</string>


    <string name="notification_tab_crew">크루</string>
    <string name="notification_tab_my_running">마이러닝</string>
    <string name="notification_alert_early_time">아직 러닝 시작시간이 아닙니다</string>

    <string name="mypage_login_request">로그인하세요</string>
    <string name="my_page_tab_my_running">마이러닝</string>
    <string name="my_page_tab_calendar">캘린더</string>
    <string name="my_page_viewpager_not_login">로그인하면 이용할 수 있습니다</string>

    <string name="title_crew">크루</string>
    <string name="title_notifications">알림</string>
    <string name="title_myPage">마이페이지</string>




    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>