<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    android:gravity="center"
    >
    <TextView
        android:id="@+id/personal_running_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="00:00:00"
        android:includeFontPadding="false"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:fontFamily="@font/notosans_bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/running_record_time"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/notosans_bold"
        />


    <TextView
        android:id="@+id/personal_running_kilo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="00.00"
        android:includeFontPadding="false"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:fontFamily="@font/notosans_bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/running_record_distance"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/notosans_bold"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/dotted_line"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"/>

    <LinearLayout
        android:id="@+id/personal_running_paces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="26dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00'00''"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:fontFamily="@font/notosans_bold"
            android:layout_marginEnd="37dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00'00''"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:fontFamily="@font/notosans_bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running_record_pace_now"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:fontFamily="@font/notosans_bold"
            android:layout_marginEnd="80dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running_record_pace_avr"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:fontFamily="@font/notosans_bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/personal_running_buttons"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"

        >
        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/pause_btn"
            android:layout_marginEnd="50dp"
            />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/stop_btn"
            />

    </LinearLayout>


</LinearLayout>